# vinculum

./: Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml  publish.yml
src/: lib.rs  sync.rs
